src/parser/input.output
Terminale, die in Grammatik unbenutzt sind

    ENDFILE
    BLANK
    BAD_WORD
    MOD
    LOWEST
    ELSE
    UNARYHIGH
    LEFTSQUARE
    LEFTPAREN
    HIGHEST


Grammatik

    0 $accept: inputfile $end

    1 inputfile: TITLE STRING_VALUE
    2          | command
    3          | inputfile command

    4 command: statement LINEINFO
    5        | expr ';' LINEINFO
    6        | BOOL_TYPE BOOL_ID '=' bool_expr ';' LINEINFO
    7        | INT_TYPE INT_ID '=' int_expr ';' LINEINFO
    8        | REAL_TYPE REAL_ID '=' real_expr ';' LINEINFO
    9        | STRING_TYPE STRING_ID '=' string_expr ';' LINEINFO
   10        | COMMENT LINEINFO
   11        | LINEINFO

   12 statement: KEYWORD
   13          | KEYWORD parameters

   14 expr: %empty
   15     | BOOL_ID '=' bool_expr
   16     | INT_ID '=' int_expr
   17     | REAL_ID '=' real_expr
   18     | STRING_ID '=' string_expr

   19 bool_expr: BOOL_VALUE
   20          | BOOL_ID
   21          | bool_expr AND bool_expr
   22          | bool_expr OR bool_expr
   23          | bool_expr EQ bool_expr
   24          | bool_expr NE bool_expr
   25          | '(' bool_expr ')'
   26          | NOT bool_expr
   27          | real_expr LT real_expr
   28          | real_expr GT real_expr
   29          | real_expr LE real_expr
   30          | real_expr GE real_expr
   31          | real_expr EQ real_expr
   32          | real_expr NE real_expr

   33 int_expr: INT_VALUE
   34         | INT_ID
   35         | '(' int_expr ')'
   36         | int_expr PLUS int_expr
   37         | int_expr MINUS int_expr
   38         | int_expr ASTERISK int_expr
   39         | int_expr DIVIDE int_expr
   40         | MINUS int_expr
   41         | PLUS int_expr

   42 real_expr: REAL_VALUE
   43          | INT_VALUE
   44          | REAL_ID
   45          | INT_ID
   46          | '(' real_expr ')'
   47          | real_expr PLUS real_expr
   48          | real_expr MINUS real_expr
   49          | real_expr ASTERISK real_expr
   50          | real_expr DIVIDE real_expr
   51          | MINUS real_expr
   52          | PLUS real_expr

   53 string_expr: STRING_VALUE
   54            | STRING_ID
   55            | INT_ID
   56            | string_expr PLUS string_expr

   57 bool_exprs: bool_expr
   58           | bool_exprs ',' bool_expr

   59 real_exprs: real_expr
   60           | real_exprs ',' real_expr

   61 int_exprs: int_expr
   62          | int_exprs ',' int_expr

   63 string_exprs: string_expr
   64             | string_exprs ',' string_expr

   65 parameters: parameter
   66           | parameters parameter

   67 parameter: REAL_PARAMETER '=' real_expr
   68          | UD_REAL_PARAMETER '=' real_expr
   69          | REAL_PARAMETER '=' '[' real_exprs ']'
   70          | UD_REAL_PARAMETER '=' '[' real_exprs ']'
   71          | INT_PARAMETER '=' int_expr
   72          | UD_INT_PARAMETER '=' int_expr
   73          | INT_PARAMETER '=' '[' int_exprs ']'
   74          | UD_INT_PARAMETER '=' '[' int_exprs ']'
   75          | STRING_PARAMETER '=' string_expr
   76          | UD_STRING_PARAMETER '=' string_expr
   77          | STRING_PARAMETER '=' '[' string_exprs ']'
   78          | STRING_PARAMETER
   79          | UD_STRING_PARAMETER '=' '[' string_exprs ']'
   80          | BOOL_PARAMETER '=' bool_expr
   81          | UD_BOOL_PARAMETER '=' bool_expr
   82          | BOOL_PARAMETER '=' '[' bool_exprs ']'
   83          | UD_BOOL_PARAMETER '=' '[' bool_exprs ']'


Terminale und die Regeln, in denen sie verwendet werden

    $end (0) 0
    '(' (40) 25 35 46
    ')' (41) 25 35 46
    ',' (44) 58 60 62 64
    ';' (59) 5 6 7 8 9
    '=' (61) 6 7 8 9 15 16 17 18 67 68 69 70 71 72 73 74 75 76 77 79 80 81 82 83
    '[' (91) 69 70 73 74 77 79 82 83
    ']' (93) 69 70 73 74 77 79 82 83
    error (256)
    LINEINFO <sval> (258) 4 5 6 7 8 9 10 11
    TITLE <sval> (259) 1
    KEYWORD <sval> (260) 12 13
    BOOL_PARAMETER <sval> (261) 80 82
    REAL_PARAMETER <sval> (262) 67 69
    INT_PARAMETER <sval> (263) 71 73
    STRING_PARAMETER <sval> (264) 75 77 78
    UD_BOOL_PARAMETER <sval> (265) 81 83
    UD_REAL_PARAMETER <sval> (266) 68 70
    UD_INT_PARAMETER <sval> (267) 72 74
    UD_STRING_PARAMETER <sval> (268) 76 79
    INT_TYPE (269) 7
    REAL_TYPE (270) 8
    BOOL_TYPE (271) 6
    STRING_TYPE (272) 9
    INT_ID <sval> (273) 7 16 34 45 55
    REAL_ID <sval> (274) 8 17 44
    BOOL_ID <sval> (275) 6 15 20
    STRING_ID <sval> (276) 9 18 54
    INT_VALUE <ival> (277) 33 43
    REAL_VALUE <dval> (278) 42
    STRING_VALUE <sval> (279) 1 53
    BOOL_VALUE <bval> (280) 19
    ENDFILE (281)
    BLANK (282)
    COMMENT (283) 10
    BAD_WORD (284)
    GE (285) 30
    GT (286) 28
    LE (287) 29
    LT (288) 27
    EQ (289) 23 31
    NE (290) 24 32
    NOT (291) 26
    OR (292) 22
    AND (293) 21
    PLUS (294) 36 41 47 52 56
    MINUS (295) 37 40 48 51
    ASTERISK (296) 38 49
    DIVIDE (297) 39 50
    MOD (298)
    LOWEST (299)
    ELSE (300)
    UNARYLOW (301)
    UNARYHIGH (302)
    LEFTSQUARE (303)
    LEFTPAREN (304)
    HIGHEST (305)


Nicht-Terminal und die Regeln, in denen sie verwendet werden

    $accept (58)
        auf der linken Seite: 0
    inputfile (59)
        auf der linken Seite: 1 2 3
        auf der rechten Seite: 0 3
    command (60)
        auf der linken Seite: 4 5 6 7 8 9 10 11
        auf der rechten Seite: 2 3
    statement <card> (61)
        auf der linken Seite: 12 13
        auf der rechten Seite: 4
    expr (62)
        auf der linken Seite: 14 15 16 17 18
        auf der rechten Seite: 5
    bool_expr <bval> (63)
        auf der linken Seite: 19 20 21 22 23 24 25 26 27 28 29 30 31 32
        auf der rechten Seite: 6 15 21 22 23 24 25 26 57 58 80 81
    int_expr <ival> (64)
        auf der linken Seite: 33 34 35 36 37 38 39 40 41
        auf der rechten Seite: 7 16 35 36 37 38 39 40 41 61 62 71 72
    real_expr <dval> (65)
        auf der linken Seite: 42 43 44 45 46 47 48 49 50 51 52
        auf der rechten Seite: 8 17 27 28 29 30 31 32 46 47 48 49 50 51 52 59 60 67 68
    string_expr <sval> (66)
        auf der linken Seite: 53 54 55 56
        auf der rechten Seite: 9 18 56 63 64 75 76
    bool_exprs <bool_array> (67)
        auf der linken Seite: 57 58
        auf der rechten Seite: 58 82 83
    real_exprs <real_array> (68)
        auf der linken Seite: 59 60
        auf der rechten Seite: 60 69 70
    int_exprs <int_array> (69)
        auf der linken Seite: 61 62
        auf der rechten Seite: 62 73 74
    string_exprs <string_array> (70)
        auf der linken Seite: 63 64
        auf der rechten Seite: 64 77 79
    parameters <parameter_array> (71)
        auf der linken Seite: 65 66
        auf der rechten Seite: 13 66
    parameter <parameter> (72)
        auf der linken Seite: 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83
        auf der rechten Seite: 65 66


Zustand 0

    0 $accept: . inputfile $end

    LINEINFO     schiebe und gehe zu Zustand 1 über
    TITLE        schiebe und gehe zu Zustand 2 über
    KEYWORD      schiebe und gehe zu Zustand 3 über
    INT_TYPE     schiebe und gehe zu Zustand 4 über
    REAL_TYPE    schiebe und gehe zu Zustand 5 über
    BOOL_TYPE    schiebe und gehe zu Zustand 6 über
    STRING_TYPE  schiebe und gehe zu Zustand 7 über
    INT_ID       schiebe und gehe zu Zustand 8 über
    REAL_ID      schiebe und gehe zu Zustand 9 über
    BOOL_ID      schiebe und gehe zu Zustand 10 über
    STRING_ID    schiebe und gehe zu Zustand 11 über
    COMMENT      schiebe und gehe zu Zustand 12 über

    $default  reduziere mit Regel 14 (expr)

    inputfile  gehe zu Zustand 13 über
    command    gehe zu Zustand 14 über
    statement  gehe zu Zustand 15 über
    expr       gehe zu Zustand 16 über


Zustand 1

   11 command: LINEINFO .

    $default  reduziere mit Regel 11 (command)


Zustand 2

    1 inputfile: TITLE . STRING_VALUE

    STRING_VALUE  schiebe und gehe zu Zustand 17 über


Zustand 3

   12 statement: KEYWORD .
   13          | KEYWORD . parameters

    BOOL_PARAMETER       schiebe und gehe zu Zustand 18 über
    REAL_PARAMETER       schiebe und gehe zu Zustand 19 über
    INT_PARAMETER        schiebe und gehe zu Zustand 20 über
    STRING_PARAMETER     schiebe und gehe zu Zustand 21 über
    UD_BOOL_PARAMETER    schiebe und gehe zu Zustand 22 über
    UD_REAL_PARAMETER    schiebe und gehe zu Zustand 23 über
    UD_INT_PARAMETER     schiebe und gehe zu Zustand 24 über
    UD_STRING_PARAMETER  schiebe und gehe zu Zustand 25 über

    $default  reduziere mit Regel 12 (statement)

    parameters  gehe zu Zustand 26 über
    parameter   gehe zu Zustand 27 über


Zustand 4

    7 command: INT_TYPE . INT_ID '=' int_expr ';' LINEINFO

    INT_ID  schiebe und gehe zu Zustand 28 über


Zustand 5

    8 command: REAL_TYPE . REAL_ID '=' real_expr ';' LINEINFO

    REAL_ID  schiebe und gehe zu Zustand 29 über


Zustand 6

    6 command: BOOL_TYPE . BOOL_ID '=' bool_expr ';' LINEINFO

    BOOL_ID  schiebe und gehe zu Zustand 30 über


Zustand 7

    9 command: STRING_TYPE . STRING_ID '=' string_expr ';' LINEINFO

    STRING_ID  schiebe und gehe zu Zustand 31 über


Zustand 8

   16 expr: INT_ID . '=' int_expr

    '='  schiebe und gehe zu Zustand 32 über


Zustand 9

   17 expr: REAL_ID . '=' real_expr

    '='  schiebe und gehe zu Zustand 33 über


Zustand 10

   15 expr: BOOL_ID . '=' bool_expr

    '='  schiebe und gehe zu Zustand 34 über


Zustand 11

   18 expr: STRING_ID . '=' string_expr

    '='  schiebe und gehe zu Zustand 35 über


Zustand 12

   10 command: COMMENT . LINEINFO

    LINEINFO  schiebe und gehe zu Zustand 36 über


Zustand 13

    0 $accept: inputfile . $end
    3 inputfile: inputfile . command

    $end         schiebe und gehe zu Zustand 37 über
    LINEINFO     schiebe und gehe zu Zustand 1 über
    KEYWORD      schiebe und gehe zu Zustand 3 über
    INT_TYPE     schiebe und gehe zu Zustand 4 über
    REAL_TYPE    schiebe und gehe zu Zustand 5 über
    BOOL_TYPE    schiebe und gehe zu Zustand 6 über
    STRING_TYPE  schiebe und gehe zu Zustand 7 über
    INT_ID       schiebe und gehe zu Zustand 8 über
    REAL_ID      schiebe und gehe zu Zustand 9 über
    BOOL_ID      schiebe und gehe zu Zustand 10 über
    STRING_ID    schiebe und gehe zu Zustand 11 über
    COMMENT      schiebe und gehe zu Zustand 12 über

    $default  reduziere mit Regel 14 (expr)

    command    gehe zu Zustand 38 über
    statement  gehe zu Zustand 15 über
    expr       gehe zu Zustand 16 über


Zustand 14

    2 inputfile: command .

    $default  reduziere mit Regel 2 (inputfile)


Zustand 15

    4 command: statement . LINEINFO

    LINEINFO  schiebe und gehe zu Zustand 39 über


Zustand 16

    5 command: expr . ';' LINEINFO

    ';'  schiebe und gehe zu Zustand 40 über


Zustand 17

    1 inputfile: TITLE STRING_VALUE .

    $default  reduziere mit Regel 1 (inputfile)


Zustand 18

   80 parameter: BOOL_PARAMETER . '=' bool_expr
   82          | BOOL_PARAMETER . '=' '[' bool_exprs ']'

    '='  schiebe und gehe zu Zustand 41 über


Zustand 19

   67 parameter: REAL_PARAMETER . '=' real_expr
   69          | REAL_PARAMETER . '=' '[' real_exprs ']'

    '='  schiebe und gehe zu Zustand 42 über


Zustand 20

   71 parameter: INT_PARAMETER . '=' int_expr
   73          | INT_PARAMETER . '=' '[' int_exprs ']'

    '='  schiebe und gehe zu Zustand 43 über


Zustand 21

   75 parameter: STRING_PARAMETER . '=' string_expr
   77          | STRING_PARAMETER . '=' '[' string_exprs ']'
   78          | STRING_PARAMETER .

    '='  schiebe und gehe zu Zustand 44 über

    $default  reduziere mit Regel 78 (parameter)


Zustand 22

   81 parameter: UD_BOOL_PARAMETER . '=' bool_expr
   83          | UD_BOOL_PARAMETER . '=' '[' bool_exprs ']'

    '='  schiebe und gehe zu Zustand 45 über


Zustand 23

   68 parameter: UD_REAL_PARAMETER . '=' real_expr
   70          | UD_REAL_PARAMETER . '=' '[' real_exprs ']'

    '='  schiebe und gehe zu Zustand 46 über


Zustand 24

   72 parameter: UD_INT_PARAMETER . '=' int_expr
   74          | UD_INT_PARAMETER . '=' '[' int_exprs ']'

    '='  schiebe und gehe zu Zustand 47 über


Zustand 25

   76 parameter: UD_STRING_PARAMETER . '=' string_expr
   79          | UD_STRING_PARAMETER . '=' '[' string_exprs ']'

    '='  schiebe und gehe zu Zustand 48 über


Zustand 26

   13 statement: KEYWORD parameters .
   66 parameters: parameters . parameter

    BOOL_PARAMETER       schiebe und gehe zu Zustand 18 über
    REAL_PARAMETER       schiebe und gehe zu Zustand 19 über
    INT_PARAMETER        schiebe und gehe zu Zustand 20 über
    STRING_PARAMETER     schiebe und gehe zu Zustand 21 über
    UD_BOOL_PARAMETER    schiebe und gehe zu Zustand 22 über
    UD_REAL_PARAMETER    schiebe und gehe zu Zustand 23 über
    UD_INT_PARAMETER     schiebe und gehe zu Zustand 24 über
    UD_STRING_PARAMETER  schiebe und gehe zu Zustand 25 über

    $default  reduziere mit Regel 13 (statement)

    parameter  gehe zu Zustand 49 über


Zustand 27

   65 parameters: parameter .

    $default  reduziere mit Regel 65 (parameters)


Zustand 28

    7 command: INT_TYPE INT_ID . '=' int_expr ';' LINEINFO

    '='  schiebe und gehe zu Zustand 50 über


Zustand 29

    8 command: REAL_TYPE REAL_ID . '=' real_expr ';' LINEINFO

    '='  schiebe und gehe zu Zustand 51 über


Zustand 30

    6 command: BOOL_TYPE BOOL_ID . '=' bool_expr ';' LINEINFO

    '='  schiebe und gehe zu Zustand 52 über


Zustand 31

    9 command: STRING_TYPE STRING_ID . '=' string_expr ';' LINEINFO

    '='  schiebe und gehe zu Zustand 53 über


Zustand 32

   16 expr: INT_ID '=' . int_expr

    INT_ID     schiebe und gehe zu Zustand 54 über
    INT_VALUE  schiebe und gehe zu Zustand 55 über
    PLUS       schiebe und gehe zu Zustand 56 über
    MINUS      schiebe und gehe zu Zustand 57 über
    '('        schiebe und gehe zu Zustand 58 über

    int_expr  gehe zu Zustand 59 über


Zustand 33

   17 expr: REAL_ID '=' . real_expr

    INT_ID      schiebe und gehe zu Zustand 60 über
    REAL_ID     schiebe und gehe zu Zustand 61 über
    INT_VALUE   schiebe und gehe zu Zustand 62 über
    REAL_VALUE  schiebe und gehe zu Zustand 63 über
    PLUS        schiebe und gehe zu Zustand 64 über
    MINUS       schiebe und gehe zu Zustand 65 über
    '('         schiebe und gehe zu Zustand 66 über

    real_expr  gehe zu Zustand 67 über


Zustand 34

   15 expr: BOOL_ID '=' . bool_expr

    INT_ID      schiebe und gehe zu Zustand 60 über
    REAL_ID     schiebe und gehe zu Zustand 61 über
    BOOL_ID     schiebe und gehe zu Zustand 68 über
    INT_VALUE   schiebe und gehe zu Zustand 62 über
    REAL_VALUE  schiebe und gehe zu Zustand 63 über
    BOOL_VALUE  schiebe und gehe zu Zustand 69 über
    NOT         schiebe und gehe zu Zustand 70 über
    PLUS        schiebe und gehe zu Zustand 64 über
    MINUS       schiebe und gehe zu Zustand 65 über
    '('         schiebe und gehe zu Zustand 71 über

    bool_expr  gehe zu Zustand 72 über
    real_expr  gehe zu Zustand 73 über


Zustand 35

   18 expr: STRING_ID '=' . string_expr

    INT_ID        schiebe und gehe zu Zustand 74 über
    STRING_ID     schiebe und gehe zu Zustand 75 über
    STRING_VALUE  schiebe und gehe zu Zustand 76 über

    string_expr  gehe zu Zustand 77 über


Zustand 36

   10 command: COMMENT LINEINFO .

    $default  reduziere mit Regel 10 (command)


Zustand 37

    0 $accept: inputfile $end .

    $default  annehmen


Zustand 38

    3 inputfile: inputfile command .

    $default  reduziere mit Regel 3 (inputfile)


Zustand 39

    4 command: statement LINEINFO .

    $default  reduziere mit Regel 4 (command)


Zustand 40

    5 command: expr ';' . LINEINFO

    LINEINFO  schiebe und gehe zu Zustand 78 über


Zustand 41

   80 parameter: BOOL_PARAMETER '=' . bool_expr
   82          | BOOL_PARAMETER '=' . '[' bool_exprs ']'

    INT_ID      schiebe und gehe zu Zustand 60 über
    REAL_ID     schiebe und gehe zu Zustand 61 über
    BOOL_ID     schiebe und gehe zu Zustand 68 über
    INT_VALUE   schiebe und gehe zu Zustand 62 über
    REAL_VALUE  schiebe und gehe zu Zustand 63 über
    BOOL_VALUE  schiebe und gehe zu Zustand 69 über
    NOT         schiebe und gehe zu Zustand 70 über
    PLUS        schiebe und gehe zu Zustand 64 über
    MINUS       schiebe und gehe zu Zustand 65 über
    '('         schiebe und gehe zu Zustand 71 über
    '['         schiebe und gehe zu Zustand 79 über

    bool_expr  gehe zu Zustand 80 über
    real_expr  gehe zu Zustand 73 über


Zustand 42
